misc & fix tub_injecting recipes